# snaketest

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
snaketest/: __init__.py
src/snaketest/: snaketest.py
