[project]
name = "snaketest"
version = "0.0.1"
authors = [
  { name="Albert", email="lahat.albert@gmail.com" },
]
description = "A small package to help test and prototype snakemake rules"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aLahat/snaketest"
"Bug Tracker" = "https://github.com/aLahat/snaketest/issues"